--- a/CARRITO_p3.html
+++ b/CARRITO_p3.html
@@ -23,7 +23,7 @@ font-family: "Audiowide", sans-serif;
         </header>
 
         <nav>
-            <a href="STORE_p1.html">Opción 1</a>
+            <a href="index.html">Opción 1</a>
             <a href="NOVEDADES_p2.html">Opción 2</a>
             <a href="CARRITO_p3.html">Opción 3</a>
             <a href="FINAL_p4.html">Opción 4</a>
