Actualizar index.html

--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@ font-family: "Audiowide", sans-serif;
             <aside class="aside-izq">
                 <h3>Destacados</h3>
                 <a href="#">Juegos de texto</a>
-                <a href="#">Juegos recomendados</a>
-                <a href="#">Premios y actualidad</a>
+                <a href="NOVEDADES_p2.html">Juegos recomendados</a>
+                <a href="NOVEDADES_p2.html">Premios y actualidad</a>
                 <a href="#">Catálogos promocionales</a>
             </aside>
 
