--- a/index.html
+++ b/index.html
@@ -22,7 +22,25 @@ font-family: "Audiowide", sans-serif;
     <div id="contenedor">
         <header>
             <h1>🎮 GTA STORE</h1>
-            <img src="./img/banner.jpg" alt="header">
+            <p id="usuario" style="color: white; font-family: Audiowide, sans-serif; font-size: 18px; margin: 10px 0;"></p>
+            
+            <!-- Carrusel con controles -->
+            <div class="carrusel-container">
+                <button class="carrusel-btn prev" onclick="cambiarImagen(-1)">❮</button>
+                <img id="banner" src="./img/banner1.jpg" alt="header">
+                <button class="carrusel-btn next" onclick="cambiarImagen(1)">❯</button>
+                
+                <!-- Indicadores de puntos -->
+                <div class="carrusel-dots">
+                    <span class="dot" onclick="irAImagen(1)"></span>
+                    <span class="dot" onclick="irAImagen(2)"></span>
+                    <span class="dot" onclick="irAImagen(3)"></span>
+                    <span class="dot" onclick="irAImagen(4)"></span>
+                    <span class="dot" onclick="irAImagen(5)"></span>
+                    <span class="dot" onclick="irAImagen(6)"></span>
+                    <span class="dot" onclick="irAImagen(7)"></span>
+                </div>
+            </div>
         </header>
 
         <nav>
@@ -35,10 +53,10 @@ font-family: "Audiowide", sans-serif;
         <main>
             <aside class="aside-izq">
                 <h3>Destacados</h3>
-                <a href="#">Juegos de texto</a>
+                <a href="index.html">Juegos de texto</a>
                 <a href="NOVEDADES_p2.html">Juegos recomendados</a>
-                <a href="NOVEDADES_p2.html">Premios y actualidad</a>
-                <a href="#">Catálogos promocionales</a>
+                <a href="CARRITO_p3.html">Premios y actualidad</a>
+                <a href="FINAL_p4.html">Catálogos promocionales</a>
             </aside>
 
             <aside class="aside-central">
@@ -136,7 +154,8 @@ font-family: "Audiowide", sans-serif;
             <p>Desarrollado por: QUINTANA GONZALES PIERO</p>
         </footer>
     </div>
-
+    <script src="./js/codigo1.js"></script>
+    <script src="./js/carrusel.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
